--- a/UI/FrontEnd/css/style.css
+++ b/UI/FrontEnd/css/style.css
@@ -4729,3 +4729,19 @@ footer {
   font-size: 13px;
   line-height: 15px;
 }
+
+.last-btn{
+  padding: 10px 100px;
+  background-color: #295283;
+  color: white;
+  font-weight: bolder;
+  transition: all .6s linear;
+  -webkit-transition: all .6s linear;
+  -moz-transition: all .6s linear;
+  -ms-transition: all .6s linear;
+  -o-transition: all .6s linear;
+  text-transform: uppercase;
+}
+.last-btn:hover{
+  background-color: #00b093;
+}
